--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/cammellos/tidal-ai-playlist#readme",
   "dependencies": {
-    "left-pad": "^1.3.0"
+    "openai": "^5.19.1"
   }
 }
