--- a/gleam.toml
+++ b/gleam.toml
@@ -19,6 +19,7 @@ gleam_json = ">= 3.0.2 and < 4.0.0"
 gleam_httpc = ">= 5.0.0 and < 6.0.0"
 envoy = ">= 1.0.2 and < 2.0.0"
 gleam_erlang = ">= 1.3.0 and < 2.0.0"
+input = ">= 1.0.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
