--- a/gleam.toml
+++ b/gleam.toml
@@ -21,6 +21,7 @@ envoy = ">= 1.0.2 and < 2.0.0"
 gleam_erlang = ">= 1.3.0 and < 2.0.0"
 input = ">= 1.0.1 and < 2.0.0"
 youid = ">= 1.5.1 and < 2.0.0"
+simplifile = ">= 2.3.0 and < 3.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
